# dresscode_bot

./: .gitignore  Dockerfile  README.md  config.yaml.example  pyproject.toml
dresscode_bot/: __main__.py  bot.py  cli.py  settings.py
dresscode_bot/services/database/: cli.py  models.py  service.py  settings.py
dresscode_bot/services/database/migrations/: env.py
dresscode_bot/services/database/migrations/versions/: cd4d86acd11f_init.py
dresscode_bot/services/telegram/: __init__.py  cli.py  enums.py  fsm.py  service.py  settings.py
dresscode_bot/services/telegram/functions/: base.py  restrictions.py
dresscode_bot/services/telegram/handlers/: new_chat.py  new_member.py
dresscode_bot/services/telegram/handlers/dialog/: callback_data.py  handlers.py  middlewares.py  state.py  utils.py
